<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/speedEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speed"
        android:inputType="number" />

    <EditText
        android:id="@+id/puncturePercentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/puncture_percent"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/passengerCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passenger_count"
        android:inputType="number" />
</LinearLayout>
