<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".circle_race.RaceActivity">

    <TextView
        android:id="@+id/trucksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trucks"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/trucksEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/trucksTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/carsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trucksTextView"/>
    <EditText
        android:id="@+id/carsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/carsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trucksEditText"/>
    <TextView
        android:id="@+id/motoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motorcycles"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carsTextView"/>
    <EditText
        android:id="@+id/motoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/motoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carsEditText"/>

    <TextView
        android:id="@+id/circleLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circle_length"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motoTextView"/>

    <EditText
        android:id="@+id/circleLengthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/circleLengthTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motoEditText"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>